2001-01-29  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-sysdep.c (set_seen): Fix typo.

	* math/libm-test.inc (rint_test): Add a few more tests for round
	to even rounding.

2001-01-28  Ulrich Drepper  <drepper@redhat.com>

	* conform/data/pthread.h-data: Correct return type of pthread_exit.

	* conform/conformtest.pl: Add -fno-builtin to CFLAGS.

	* conform/data/stdlib.h-data: Add _Exit.

	* inet/arpa/inet.h: Don't include <sys/types.h>.  Define socklen_t
	if not already happened.
	* inet/netinet/in.h: Don't include <sys/types.h>, use <bits/types.h>.
	Don't include <limits.h> and <bits/sockaddr.h>.

	* conform/data/netinet/in.h-data: Allow all of <inttypes.h>.

	* conform/data/spawn.h-data: Allow all of <sched.h>.

	* sysdeps/ia64/fpu/fraiseexcpt.c: Include <float.h>.  Removed
	unused variable.

	* sunrpc/xdr_rec.c (xdrrec_getpos): Add cast to long to avoid warning.
	* sunrpc/xdr_sizeof.c (x_inline): Likewise.

	* sysdeps/ieee754/ldbl-96/s_frexpl.c: Include <float.h>.

	* conform/conformtest.pl: Define $mustprepend{"stdio.h"}.
	* libio/stdio.h: Define va_list correctly.

	* conform/data/pthread.h-data: Make priority protocol related
	functions optional.  Fix typos.

	* posix/sched.h: Define sched_priority as __sched_priority.
	* sysdeps/generic/bits/sched.h (struct sched_param): Rename element
	to __sched_priority.
	* sysdeps/unix/sysv/linux/bits/sched.h: Likewise.

2001-01-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/clock_getcpuclockid.c: Include <time.h> instead
	of <sys/time.h>.

	* sysdeps/unix/stime.c: Include <stddef.h> for NULL.
	* sysdeps/unix/time.c: Likewise.

	* conform/data/time.h-data: CLK_TCK is not in XPG6.  Fix tzname entry.
	* sysdeps/mach/hurd/bits/time.h: Don't define CLK_TCK for XPG6.
	* sysdeps/mach/hurd/i386/bits/time.h: Likewise.
	* sysdeps/unix/sysv/linux/bits/time.h: Likewise.
	* sysdeps/unix/sysv/linux/alpha/bits/time.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/time.h: Likewise.